--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This is just a continuation of this project and try and complete gtk2 compatibility with qt4 and eventually qt5.1
---- Zach Thibeau
+--- Zach Thibeau (zachary.thibeau@gmail.com)
 Original Author's Readme
 Hi there.
 
